--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "16.8.0-alpha.0",
     "react-dom": "16.8.0-alpha.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
